--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Practice JavaScript</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <link rel="stylesheet" href="lib/jasmine-5.1.1/jasmine.css" >
 
     <script type="text/javascript" src="lib/jasmine-5.1.1/jasmine.js"></script>
