--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="lib/jasmine-5.1.1/boot0.js"></script>
     <script type="text/javascript" src="lib/jasmine-5.1.1/boot1.js"></script>
 
-    <script type="text/javascript" src="spec/oneMethodCallSpec.js"></script>
+    <script type="text/javascript" src="spec/zeroMethodCallSpec.js"></script>
 </head>
 <body>
 
