Add Test Methods

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     <script type="text/javascript" src="lib/jasmine-5.1.1/boot0.js"></script>
     <script type="text/javascript" src="lib/jasmine-5.1.1/boot1.js"></script>
 
-    <script type="text/javascript" src="spec/zeroMethodCallSpec.js"></script>
+    <!-- ******************** MASTER  ******************** -->
+    <script type="text/javascript" src="spec/master/array/methodCallsSpec.js"></script>
+   <script type="text/javascript" src="spec/master/array/dataStructuresSpec.js"></script>
+    <script type="text/javascript" src="spec/master/array/functionCalls.js"></script>-->
+
+    <script type="text/javascript" src="spec/master/string/methodCallsSpec.js"></script>
+    <script type="text/javascript" src="spec/master/string/searchCalls.js"></script>
+
+
+
 </head>
 <body>
 
