--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="spec/master/string/methodCallsSpec.js"></script>
     <script type="text/javascript" src="spec/master/string/searchCalls.js"></script>
 
+    <script type="text/javascript" src="spec/master/regexpr/objectsSpec.js"></script>
+
 
 
 </head>
