--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <script type="text/javascript" src="spec/master/string/searchCalls.js"></script>
 
     <script type="text/javascript" src="spec/master/regexpr/objectsSpec.js"></script>
+    <script type="text/javascript" src="spec/master/regexpr/regExprMethodSpec.js"></script>
+
+
 
 
 
